fix: KaTeX block overflow causing layout shift

--- a/src/app.pcss
+++ b/src/app.pcss
@@ -182,4 +182,8 @@
 	.prose > pre {
 		font-size: 15px;
 	}
+
+	.prose > .math-display {
+		overflow-x: auto;
+	}
 }
